Revision history for App::MCP::Worker

          - Added ::Roles
          - SRP API authentication complete
          - Replaced DH key exchange with SRP::Blowfish
          - Now with DH key exchange
          - Added host authentication
          - Added user authentication
          - Serialize with JSON not Storable
          - Added job creation

0.2.1     2013-08-22 00:22:47
          - Switched to using Dist::Zilla

0.1.6     2013-08-22 00:21:16
          - Converted from SVN to Git
          - Created
