@@ -2,8 +2,9 @@ name = App-MCP-Worker
 
 [Prereqs]
 perl              = 5.010001
-namespace::sweep  = 0.006
+namespace::autoclean = 0.19
 Class::Usul       = v0.33.0
+Crypt::SRP        = 0.013
 File::DataClass   = v0.21.0
 HTTP::Message     = 6.06
 LWP               = 6.04
