@@ -1,5 +1,6 @@
 Revision history for App::MCP::Worker
 
+          - Replaced namespace::sweep with autoclean
           - Added ::Roles
           - SRP API authentication complete
           - Replaced DH key exchange with SRP::Blowfish
